评论方法修改